# GPAC-General-Programming-Assembly-Compiled

./: DirectCompile.sh  Files.list  InstallANTLR4andGenerateCppParserFiles.sh  License.md  Notes.txt  README.md  ToolchainRequirements.txt  WindowsDirectCompile.ps1  arrays.gpac  conditionals.gpac  console_io.gpac  hello_world.gpac  loops.gpac  memory_regions.gpac  native_bridge.gpac  procedures.gpac  simulation_kernel.gpac  structs.gpac  tracks.gpac  variables.gpac
GPAC-General-Programming-Assembly-Compiled/gpac_backend/: CMakeLists.txt  README.md
GPAC-General-Programming-Assembly-Compiled/gpac_backend/docs/: BACKEND_PIPELINE.md
GPAC-General-Programming-Assembly-Compiled/gpac_backend/examples/: hello.gpir  math.gpir
GPAC-General-Programming-Assembly-Compiled/gpac_backend/runtime/: zvm_loader.hpp
GPAC-General-Programming-Assembly-Compiled/gpac_backend/src/: assembler.cpp  llvm_backend.cpp  main.cpp  native_driver.cpp  verifier.cpp
GPAC-General-Programming-Assembly-Compiled/gpac_backend/tests/: test_backend_emit.py
GPAC-General-Programming-Assembly-Compiled/gpac_backend/tools/: gpac_backend.py
GPAC-General-Programming-Assembly-Compiled/gpac_pipeline/: CMakeLists.txt  Includes.txt  README.md  build.py
GPAC-General-Programming-Assembly-Compiled/gpac_pipeline/docs/: PIPELINE.md
GPAC-General-Programming-Assembly-Compiled/gpac_pipeline/examples/: arrays.gpac  conditionals.gpac  console_io.gpac  hello_world.gpac  loops.gpac  memory_regions.gpac  native_bridge.gpac  procedures.gpac  simulation_kernel.gpac  structs.gpac  tracks.gpac  variables.gpac
(+52 files in other folders)
